--- a/Esport/index.html
+++ b/Esport/index.html
@@ -7,11 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
     <title>titolo</title>
-<<<<<<< HEAD
     <h1>giamp</h1>
-=======
     <footer></footer>
->>>>>>> develop
 </body>
 </html>
