--- a/Esport/index.html
+++ b/Esport/index.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-</head>
-<body>
-
-</body>
+    <link rel="stylesheet" href="./Style/style.css">
 </head>
 
 <body>
+    
+<div class="header">
+    <!-- inserire video background -->
+</div>
+
+
 
 </body>
-
 
 </html>
+
+
+
+
+
+
