sistemato header in giampBranch

--- a/Esport/index.html
+++ b/Esport/index.html
@@ -13,7 +13,7 @@
 
     <div class="header">
         <div class="logo">
-            <h1>Valorant</h1>
+            <h1>E-Sport</h1>
         </div>
         <ul class="menu">
             <li><a href="">Home</a></li>
