--- a/Esport/index.html
+++ b/Esport/index.html
@@ -32,16 +32,21 @@
         <source src="./Contents/video/intro-video.mp4" type="video/mp4" />
         Your browser does not support HTML video.
       </video>
+
+      <h2 class="title">VALORANT <span>ESPORT</span></h2>
+
     </div>
     <!-- <header>
         <h1> VALORANT TOURNAMENTS PLATFORM</h1>
     </header> -->
-    <section>
+
+
+    <!-- <section>
         <h2>LATEST NEWS</h2>
         <div>
             
         </div>
-    </section>
+    </section> -->
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
