--- a/Esport/index.html
+++ b/Esport/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive menu A</title>
+    <title>Valorant Esport</title>
     <link rel="stylesheet" href="./Style/style.css" />
 </head>
 
