--- a/Esport/index.html
+++ b/Esport/index.html
@@ -41,6 +41,12 @@
         <div>
             
         </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
     </section>
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
