--- a/Esport/index.html
+++ b/Esport/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Valorant Esport</title>
     <link rel="stylesheet" href="./Style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,11 +19,17 @@
             <!-- <h1>E-Sport</h1> -->
         </div>
         <ul class="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="">HOMEPAGE</a></li>
+            <li><a href="">TOURNAMENTS</a></li>
+            <li><a href="">PLAYERS</a></li>
+            <li><a href="">GALLERY</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">JOIN US</a></li>
         </ul>
+
+        <div class="logo-valorant">
+            <img src="./Contents/img/transparent-red-logo2.png" alt="logo-valorant">
+        </div>
 
         <div class="hamburger">
             <span></span>
@@ -30,7 +39,7 @@
     </div>
 
 
-    
+
     <div class="video">
         <video width="100%" autoplay loop muted>
             <source src="./Contents/video/intro-video.mp4" type="video/mp4" />
