--- a/Esport/index.html
+++ b/Esport/index.html
@@ -81,7 +81,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
-    <script src="./script/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
