ripulito e aggiustato codice

--- a/Esport/index.html
+++ b/Esport/index.html
@@ -12,10 +12,7 @@
 
     <link rel="stylesheet" href="./style/style.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700;900&display=swap"
-        rel="stylesheet"> <!-- FONT PLAYFAIR -->
+    <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
 
     <title>Valorant Esport</title>
 </head>
@@ -26,15 +23,15 @@
     <div class="header">
         <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
         <ul class="menu">
-            <li><a href="">Homepage</a></li>
-            <li><a href="">Tournaments</a></li>
-            <li><a href="">Players</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="">HOMEPAGE</a></li>
+            <li><a href="">TOURNAMENTS</a></li>
+            <li><a href="">TEAMS</a></li>
+            <li><a href="">GALLERY</a></li>
+            <li><a href="">JOIN US</a></li>
         </ul>
 
         <div class="logo-right">
-            <img class="logo__logo-right" src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
+            <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
         </div>
 
         <div class="hamburger">
