--- a/Esport/index.html
+++ b/Esport/index.html
@@ -10,10 +10,14 @@
         integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- RESET CSS -->
 
-        <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet"> 
+    <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet"> <!-- valorant font -->
+
+    <!-- body font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./style/style.css">
-
-
     <title>Valorant Esport</title>
 </head>
 
