--- a/tournaments.html
+++ b/tournaments.html
@@ -182,7 +182,9 @@
 </div>
 
 
-
+<footer>
+    valorant
+</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
     <script src="./scripts/main.js"></script>
 </body>
