--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
         <div class="hero__content">
             <!-- BEM sintax -->
-            <img class="hero__content__img" src="./Contents/img/transparent-red-logo-1.png" alt="" srcset="">
-            <h2 class="normal-text">ESPORT</h2>
+            <h1><span>LevelUp</span><span class="intro-text">VALORANT</span><span class="normal-text">ESPORT</span></h1>
         </div>
 
         <video autoplay muted loop id="video-back">
@@ -58,25 +57,18 @@
         </video>
     </div>
 
-    <div class="paragrafi" style="margin-top: 80px;">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur molestias quam, repudiandae
-            reprehenderit libero mollitia amet magni quasi debitis enim cumque molestiae ullam praesentium placeat
-            distinctio nostrum sunt aut.</p>
+    <div class="bottom-arrow">
+
+    </div>
+
+
+    
+    <div class="content">
+        <div class="main-content">
+            <h2 class="latest-news">LATEST NEWS</h2>
+        </div>
+    
+        <div class="siedebar"></div>
     </div>
 
 
