aggiunto css al HTML

--- a/tournaments.html
+++ b/tournaments.html
@@ -12,6 +12,7 @@
 
     <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/tournaments.css">
 
 
     <title>Valorant Esport</title>
