--- a/form.html
+++ b/form.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- RESET CSS -->
 
         <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet"> 
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="./Style/form.css">
 
 
     <title>Valorant Esport</title>
@@ -22,7 +23,7 @@
     <div class="header">
         <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
         <ul class="menu">
-            <li><a href="">HOMEPAGE</a></li>
+            <li><a href="./index.html">HOMEPAGE</a></li>
             <li><a href="">TOURNAMENTS</a></li>
             <li><a href="">TEAMS</a></li>
             <li><a href="">GALLERY</a></li>
@@ -38,9 +39,31 @@
             <span></span>
             <span></span>
         </div>
-        <form action="">
-
-        </form>
     </div>
+    <main>
+        
+<form>
+    <label for="fname">First name:</label>
+    <input type="text" id="fname" name="fname" value="" placeholder="Enter your Name...">
+    <label for="mname">Middle name:</label>
+    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)">
+    <label for="lname">Last name:</label>
+    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname...">
+    <label for="btag">Battle Tag:</label>
+    <input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag...">
+    <label for="age">Age</label>
+    <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY" onfocus="(this.type = 'date')"/>
+    <label for="tname">Team Name</label>
+    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name"/>
+    <label for="age">Age</label>
+    <input type="text" id="age" name="age" value="" placeholder=""/>
+    <label for="age">Age</label>
+    <input type="text" id="age" name="age" value="" placeholder=""/>
+
+  </form>
+
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
+    <script src="./scripts/main.js"></script>
+
 </body>
