--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
     <script src="./scripts/main.js"></script>
+    <script src="./tournaments.js"></script>
 </body>
 
 </html>
