--- a/form.html
+++ b/form.html
@@ -55,11 +55,19 @@
     <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY" onfocus="(this.type = 'date')"/>
     <label for="tname">Team Name</label>
     <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name"/>
-    <label for="age">Age</label>
-    <input type="text" id="age" name="age" value="" placeholder=""/>
-    <label for="age">Age</label>
-    <input type="text" id="age" name="age" value="" placeholder=""/>
-
+    <p>Gender</p>
+    <input type="radio" id="male" name="male" value="Male"/>
+    <label for="Male">Male</label>
+    <input type="radio" id="Female" name="Female" value="Female"/>
+    <label for="female">Female</label>
+    <input type="radio" id="not-indicated" name="not-indicated" value="Not Indicated">
+    <label for="not-indicated">Not Binary</label>
+    <label for="hair-color">Hair</label>
+    <input type="color" id="hair-color" name="hair-color" value="hair-color" />
+    <label for="hair-color">HAIR</label>
+    <input type="color" name="eye-color" id="eye-color" value="eye-color">
+    <label for="eye-color">EYES</label>
+    <input type="">
   </form>
 
     </main>
