aggiunto menu a scomparsa allo scroll, aggiunte ancore ai link
manca stile botto go-back, footer, desktop version

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap" rel="stylesheet">
 
     <!-- font -->
-    <link href="//db.onlinewebfonts.com/c/561f38b1f4570de0fb8a39d691ab058c?family=Tungsten+Bold" rel="stylesheet"
-        type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 
 
 
@@ -204,11 +206,15 @@
         </main>
 
         <div class="sidebar" style="color: yellow;">sidebar</div>
+
     </div>
 
 
     <!-- Links to articles -->
 
+
+
+    <a name="go-back"></a>
     <div class="news-title">
         <h2>NEWS</h2>
     </div>
@@ -235,11 +241,15 @@
 
 
     <!-- Articles -->
-    <a name="article-one"></a>
+
 
     <section class="articles-section">
 
         <article>
+
+            <!-- article one -->
+
+            <a name="article-one"></a>
 
             <div class="img-article">
                 <img src="./Contents/img/articles img/full-img-art1.png" alt="" srcset="">
@@ -264,7 +274,7 @@
                 <br><br>
 
                 <h3>
-                    Group A: The perfect start for Acend, Fnatic & G2
+                    Group A: The perfect start for Acend, Fnatic and G2
                 </h3>
 
                 <br><br>
@@ -289,7 +299,7 @@
                 <br><br>
 
                 <h3>
-                    Group B: BBL, Guild & Team Liquid on top
+                    Group B: BBL, Guild and Team Liquid on top
                 </h3>
 
                 <br><br>
@@ -318,6 +328,7 @@
                 <h3>go back</h3>
             </a>
 
+            <!-- article two -->
 
             <a name="article-two"></a>
 
@@ -420,9 +431,10 @@
                 <br><br>
 
                 <p>
-                    MENA’s Regional League is split into two different sections: GCC & Iraq, and Levant & North Africa.
+                    MENA’s Regional League is split into two different sections: GCC and Iraq, and Levant and North
+                    Africa.
                     <br><br>
-                    GCC & Iraq
+                    GCC and Iraq
                     <br><br>
                     Will anyone ever topple Team Falcons? After a dominant run in Stage 1, Saudia Arabia’s finest have
                     soared to the top of
@@ -457,11 +469,16 @@
                     promises to be a region absolutely full of them.
                 </p>
                 <br><br>
-                <a name="article-three"></a>
+                <a href="#go-back">
+                    <h3>go back</h3>
+                </a>
+
             </div>
 
-           
+            <!-- article three -->
 
+
+            <a name="article-three"></a>
             <div class="img-article">
                 <img src="./Contents/img/articles img/full-img-art3.png" alt="" srcset="">
             </div>
@@ -542,9 +559,164 @@
                 <div class="img-inside-article">
                     <img src="./Contents/img/articles img/full-img-art3e.png" alt="" srcset="">
                 </div>
+                <br><br>
 
+<a href="#go-back">
+    <h3>go back</h3>
+</a>
+            </div>
+
+            <!-- article four -->
+
+            <a name="article-four"></a>
+
+            <div class="img-article">
+                <img src="./Contents/img/articles img/full-img-art4.png" alt="" srcset="">
+            </div>
+
+            <div class="article-four">
+
+                <h2>
+                    VCT EMEA STAGE 2 CHALLENGERS BEGINS MAY 13
+                </h2>
+                <br><br>
+
+                <h3>Everything you need to know about the next stage of Europe’s premier VALORANT competition</h3>
+                <br><br>
+                <p>
+                    Welcome back to VCT EMEA! Stage 2 picks up where Stage 1 left off — 12 of EMEA’s best VALORANT teams
+                    battling for
+                    regional supremacy, Circuit Points and a handful of coveted international invitations.
+                    <br><br>
+                    In Stage 1, few teams could keep up with Fnatic and FunPlus Phoenix, group winners who soon found
+                    themselves pitted
+                    against each other in the Playoffs’ Upper Bracket Final. FPX won that match — featuring a
+                    magnificent 13-0 performance
+                    on Split — en route to winning the Grand Final 3-1 against G2 Esports, but their victory was
+                    bittersweet. The Stage 1
+                    Champions could not compete at Masters 1 due to travel restrictions, and no EMEA team made Top 4 at
+                    Reykjavik.
+                    <br><br>
+                    With plenty left to prove, can FPX remain Kings of EMEA, or will a new team unseat them at the top?
+                    In order to follow
+                    all the action, here’s everything you need to know about VCT EMEA Stage 2 Challengers.
+
+                </p>
+                <br><br>
+
+                <h3>
+                    FORMAT OVERVIEW
+                </h3>
+
+                <br><br>
+
+                <p>
+                    Like Stage 1, the VCT EMEA Stage 2 Challengers format is divided into the Group Stage and Playoffs.
+                    During the Group
+                    Stage, 12 teams are drawn into two groups of six, where each group plays a single Round Robin. The
+                    top three teams of
+                    each group advance to the Playoffs, with the first place teams granted an opening bye. All Group
+                    Stage matches are
+                    best-of-three.
+                    <br><br>
+
+                    For Playoffs, the six qualified teams compete in a double elimination bracket. All matches are
+                    best-of-three, except for
+                    the Lower Bracket Final and Grand Final, which are best-of-five. The top three Playoff finishers
+                    will represent EMEA at
+                    Masters 2.
+                    <br><br>
+
+                    All VCT EMEA Stage 2 Challengers teams will receive Circuit Points based on their finish, points
+                    that are needed to
+                    qualify for VCT Champions or the Last Chance Qualifier.
+                </p>
+
+
+
+                <br><br>
+
+                <h3>
+                    Group B: BBL, Guild and Team Liquid on top
+                </h3>
+
+                <br><br>
+
+                <p>
+                    Turkey’s finest, BBL, have come into Stage 2 with victory in their sights, taking down
+                    esports icons NAVI in a reverse sweep that saw 34 matches played on Icebox alone. While next week
+                    may see them stumble against the might of Team Liquid, this win is the perfect way to start off
+                    their run.
+                    <br><br>
+                    Liquid won’t go down easy, though, as the squad easily felled Berlin International Gaming
+                    across Icebox and Split in a series that, unfortunately, wasn’t BIG’s best. While they’re set to
+                    meet their match in the form of BBL, it’ll be interesting to see if the Turkist titans manage to
+                    topple one of Europe’s most iconic orgs.
+                    <br><br>
+                    Matching their tempo is Guild, who clashed with M3C in a
+                    battle for the ages. With Leo "Leo" Jannesson flexing on the competition in style, Britain’s finest
+                    find themselves at the top of the leaderboard.
+                </p>
+
+                <br><br>
+
+                <div class="img-inside-article">
+                    <img src="./Contents/img/articles img/full-img-art3b.png" alt="" srcset="">
+                </div>
+
+                <br><br>
+
+                <h3>PARTICIPATING TEAMS</h3>
+
+                <br><br>
+
+                <p>
+                    To determine the groups for VCT EMEA Stage 2 Challengers, the 12 teams were separated into two pools
+                    — Stage 1 playoff
+                    teams (Pool 1) and Stage 1 teams that fell in the Stage 1 Group Stage (Pool 2). The newly promoted
+                    team FOKUS replaced
+                    relegated side SuperMassive Blaze in Pool 2.
+                    <br><br>
+                    Teams were randomly drawn from one pool at a time, starting with Pool 1, followed by Pool 2. Drawn
+                    teams were placed
+                    into groups in alternating order until the groups were filled.
+                </p>
+
+                <br><br>
+
+                <div class="img-inside-article">
+                    <img src="./Contents/img/articles img/full-img-art4a.png" alt="" srcset="">
+                </div>
+
+                <br><br>
+
+                <h3>HOW TO WATCH</h3>
+
+                <br><br>
+                <h3>VCT EMEA Stage 2 Challengers — Group Stage (May 13 - June 12)</h3>
+
+                <br><br>
+
+                <p>
+                    Each broadcast day begins with a preshow at 3:30 pm CEST, followed by the first of two matches at
+                    4:00 pm CEST. Matches
+                    will be played every week on Friday, Saturday and Sunday.
+                </p>
+
+                <br><br>
+
+                <p>./ Week 1: May 13 - 15</p>
+                <p>./ Week 2: May 20 - 22</p>
+                <p>./ Week 3: May 27 - 29</p>
+                <p>./ Week 4: June 3 - 5 </p>
+                <p>./ Week 5: June 10 - 12</p>
 
             </div>
+
+            <a href="#go-back">
+                <h3>go back</h3>
+            </a>
+            <br><br>
 
         </article>
 
