--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
 
 
 
-
+<a name="go-back"></a>
     <div class="news-title">
         <h2>NEWS</h2>
     </div>
     <div class="container-articles">
 
-        <a href="#article-one">
+        <a href="news.html#article-one">
 
             <img src="./Contents/img/articles img/article-1.png" alt="" srcset="">
         </a>
