--- a/news.html
+++ b/news.html
@@ -150,7 +150,7 @@
 
                 <br><br>
 
-                <a href="#go-back">
+                <a href="index.html#go-back">
                     <h3>go back</h3>
                 </a>
 
