--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
             <img src="./Contents/img/articles img/article-1.png" alt="" srcset="">
         </a>
 
-        <a href="#article-two">
+        <a href="news.html#article-two">
             <img src="./Contents/img/articles img/article-2.png" alt="" srcset="">
         </a>
 
-        <a href="#article-three">
+        <a href="news.html#article-three">
             <img src="./Contents/img/articles img/article-3.png" alt="" srcset="">
         </a>
 
-        <a href="#article-four">
+        <a href="news.html#article-four">
             <img src="./Contents/img/articles img/article-4.png" alt="" srcset="">
         </a>
 
