--- a/form.html
+++ b/form.html
@@ -42,25 +42,25 @@
     <main>
 <form class="form-container" id="form">
     <label class="form-item" for="fname">First name:</label>
-    <input type="text" id="fname" name="fname" value="" placeholder="Enter your Name..." required>
+    <input type="text" id="fname" name="fname" value="" placeholder="Enter your Name..." pattern="[a-zA-Z]" required>
     <label class="form-item" for="mname">Middle name:</label>
-    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)" required>
+    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)" pattern="[a-zA-Z]">
     <label class="form-item" for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname..." required>
+    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname..." pattern="[a-zA-Z]" required >
     <label class="form-item" for="btag">Battle Tag:</label>
-    <input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag...">
+    REGEX<input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..." pattern="[a-zA-Z]" required>
     <label class="form-item" for="tname">Team Name</label>
-    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..."/>
+    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..." pattern="[a-zA-Z0-9]" required/>
     <label for="email">Enter your email:</label>
     <input type="email" id="email" placeholder="Enter your email..." required>
     <label class="form-item" for="phone">Phone</label>
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your phone number...">
+    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your phone number..." required>
     <label class="form-item" for="city">City</label>
-    <input type="text" name="city" id="address" placeholder="Enter your city...">
+    <input type="text" name="city" id="address" placeholder="Enter your city..." required>
     <label class="form-item" for="address">Address</label>
-    <input type="text" name="address" id="address" placeholder="Enter your address...">
+    <input type="text" name="address" id="address" placeholder="Enter your address..." required>
     <label for="country">Country</label>
-<select id="country" name="country" value="">
+<select id="country" name="country" value="" required>
    <option value="Afganistan">Afghanistan</option>
    <option value="Albania">Albania</option>
    <option value="Algeria">Algeria</option>
@@ -321,19 +321,19 @@
     <label class="form-item" for="eye-color">Eyes</label>
     <input class="color-input" type="color" name="eye-color" id="eye-color" value="eye-color" list/>
     <p class="tournaments">Desired Tournaments</p>
-    <label for="tournament1">tournament1</label>
+    <label class="form-item" for="tournament1">tournament1</label>
     <input type="radio" id="tournament1" name="tournaments" value="tournament1">
-    <label for="tournament2">tournament2</label>
+    <label class="form-item" for="tournament2">tournament2</label>
     <input type="radio" id="tournament2" name="tournaments" value="tournament2">
-    <label for="tournament3">tournament3</label>
+    <label class="form-item" for="tournament3">tournament3</label>
     <input type="radio" id="tournament3" name="tournaments" value="tournament3">
-    <label for="tournament1">tournament4</label>
+    <label class="form-item" for="tournament1">tournament4</label>
     <input type="radio" id="tournament4" name="tournaments" value="tournament1">
-    <label for="tournament2">tournament5</label>
+    <label class="form-item" for="tournament2">tournament5</label>
     <input type="radio" id="tournament5" name="tournaments" value="tournament2">
-    <label for="tournament3">tournament6</label>
+    <label class="form-item" for="tournament3">tournament6</label>
     <input type="radio" id="tournament6" name="tournaments" value="tournament3">
-    <label for="bio"></label>
+    <label class="form-item" for="bio"></label>
   </form>
   <!-- <button type="submit" form="form" value="Submit">Submit</button>
   <button type="reset" form="form" value="Reset">Reset</button>    -->
