--- a/index.html
+++ b/index.html
@@ -193,14 +193,9 @@
                         <br>
                     </div>
 
-
-
                     <div class="content-ema-img">
                         <img src="https://cdn0.gamesports.net/storage/181000/181908.jpg" alt="">
                     </div>
-
-
-
 
                 </article>
             </section>
@@ -215,7 +210,7 @@
 
 
 
-<a name="go-back"></a>
+    <a name="go-back"></a>
     <div class="news-title">
         <h2>NEWS</h2>
     </div>
@@ -247,6 +242,38 @@
 
 
     <!-- footer -->
+
+    <footer>
+        <div class="footer-container">
+            <div class="social-links">
+                <ul>
+                    <li><img src="./Contents/img/articles img/twitter.png" alt="twitter"></li>
+                    <li><img src="./Contents/img/articles img/youtube.png" alt="twitter"></li>
+                    <li><img src="./Contents/img/articles img/instagram.png" alt="twitter"></li>
+                    <li><img src="./Contents/img/articles img/facebook.png" alt="twitter"></li>
+                </ul>
+            </div>
+        
+            <div class="footer-logo">
+                <h1><span>LevelUp</span><span class="valorant-footer-text">VALORANT</span><span
+                        id="esport-footer">ESPORT</span></h1>
+            </div>
+
+            <div class="bottom-footer">
+                <ul class="footer-sections">
+                    <li><a href="./index.html">HOMEPAGE</a></li>
+                    <li><a href="./tournaments.html">TOURNAMENTS</a></li>
+                    <li><a href="./players.html">TEAMS</a></li>
+                    <li><a href="./news.html">NEWS</a></li>
+                    <li><a href="./gallery.html">GALLERY</a></li>
+                    <li><a href="./form.html">JOIN US</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+
+
 
 
 
