aggiunto png trofeo

--- a/tournaments.html
+++ b/tournaments.html
@@ -74,7 +74,7 @@
 
 
         <div class="paragrafi trophy-card">
-            <img src="Contents/img/pngegg.png" class="gamingtrophy" alt="trophy">
+            <img src="Contents/img/logo-trophy-1.png" class="gamingtrophy" alt="trophy">
             <h4 class="trophy-title">Trophy 1</h4>
 
             <h5>City : Madrid</h5>
