--- a/tournaments.html
+++ b/tournaments.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="paragrafi trophy-card">
-            <img src="Contents/img/pngegg.png" class="gamingtrophy" alt="trophy">
+            <img src="Contents/img/trophies-logos/logo-trophy-4.png" class="gamingtrophy" alt="trophy">
             <h4 class="trophy-title">Trophy 1</h4>
 
             <h5>City : Milan</h5>
@@ -118,7 +118,17 @@
         <div class="paragrafi trophy-card">
 
             <h4 class="trophy-title">Trophy 1</h4>
-            <img src="" alt="">
+            <img src="Contents/img/trophies-logos/logo-trophy-5.png" class="gamingtrophy" alt="trophy">
+            <h5>City : Milan</h5>
+            <h5> Date: 21/7/22</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
+                dolorum veniam nemo mollitia quaerat nostrum dignissimos voluptatem nesciunt doloribus, dolore eligendi
+                similique fugit animi!</p>
+        </div>
+        <div class="paragrafi trophy-card">
+
+            <h4 class="trophy-title">Trophy 1</h4>
+            <img src="Contents/img/trophies-logos/logo-trophy-6.png" class="gamingtrophy" alt="trophy">
             <h5>City : Milan</h5>
             <h5> Date: 21/7/22</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
