sistemata versione desktop, mobile landscape

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <body>
 
+    <!-- HEADER -->
 
     <div class="header">
         <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
@@ -63,11 +64,10 @@
     <div class="hero">
 
         <div class="hero__content">
-            <!-- BEM sintax -->
             <h1><span>LevelUp</span><span class="intro-text">VALORANT</span><span id="esport">ESPORT</span></h1>
         </div>
 
-        <video autoplay muted loop id="video-back">
+        <video autoplay muted loop  id="video-back">
             <source src="./Contents/video/intro-video_Trim.mp4" type="video/mp4">
         </video>
     </div>
@@ -77,6 +77,7 @@
     </div>
 
 
+    <!-- INTRO VALORANT ESPORT -->
 
     <div class="container-presentation">
 
@@ -235,6 +236,10 @@
 
     </div>
 
+    <div class="top">
+        <a href="#" class="to-top"></a>
+    </div>
+
 
 
     <!-- about -->
@@ -246,14 +251,19 @@
     <footer>
         <div class="footer-container">
             <div class="social-links">
+
                 <ul>
-                    <li><img src="./Contents/img/articles img/twitter.png" alt="twitter"></li>
-                    <li><img src="./Contents/img/articles img/youtube.png" alt="twitter"></li>
-                    <li><img src="./Contents/img/articles img/instagram.png" alt="twitter"></li>
-                    <li><img src="./Contents/img/articles img/facebook.png" alt="twitter"></li>
+                    <li><a href="https://twitter.com/ValorantEsports" target="_blank"><img
+                                src="./Contents/img/articles img/twitter.png" alt="twitter"></a></li>
+                    <li> <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank"> <img
+                                src="./Contents/img/articles img/youtube.png" alt="youtube"></a></li>
+                    <li><a href="https://www.instagram.com/valorantesports/" target="_blank"><img
+                                src="./Contents/img/articles img/instagram.png" alt="instagram"></a></li>
+                    <li><a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
+                                src="./Contents/img/articles img/facebook.png" alt="facebook"></a></li>
                 </ul>
             </div>
-        
+
             <div class="footer-logo">
                 <h1><span>LevelUp</span><span class="valorant-footer-text">VALORANT</span><span
                         id="esport-footer">ESPORT</span></h1>
@@ -272,13 +282,6 @@
 
         </div>
     </footer>
-
-
-
-
-
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
     <script src="./scripts/main.js"></script>
