--- a/news.html
+++ b/news.html
@@ -151,7 +151,7 @@
                 <br><br>
 
                 <a href="index.html#go-back">
-                    <h3>go back</h3>
+                    <span class="arrow arrow-left"></span>
                 </a>
 
             </div>
@@ -300,7 +300,7 @@
                 </p>
                 <br><br>
                 <a href="index.html#go-back">
-                    <h3>go back</h3>
+                    <span class="arrow arrow-left"></span>
                 </a>
 
             </div>
@@ -392,7 +392,7 @@
                 <br><br>
 
                 <a href="index.html#go-back">
-                    <h3>go back</h3>
+                    <span class="arrow arrow-left"></span>
                 </a>
             </div>
 
@@ -543,8 +543,8 @@
 
                 <br><br>
 
-                <a href="index.html#go-back" >
-                    <h3>go back</h3>
+                <a href="index.html#go-back">
+                    <span class="arrow arrow-left"></span>
                 </a>
 
 
@@ -585,7 +585,9 @@
                     <li><a href="./form.html">JOIN US</a></li>
                 </ul>
             </div>
-    
+            <div class="top">
+                <a href="#" class="to-top"></a>
+            </div>
         </div>
     </footer>
   
