aggiunta freccia quando l'header allo scroll si nasconde

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <li><a href="./form.html">JOIN US</a></li>
         </ul>
 
+        
+            <span class="arrow arrow-down"></span>
+        
+
         <div class="logo-right">
             <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
         </div>
@@ -60,7 +64,6 @@
             <span></span>
         </div>
     </div>
-
     <div class="hero">
 
         <div class="hero__content">
