--- a/form.html
+++ b/form.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    /* $battleTag = $connection->real_escape_string($_POST['btag']);
+    $teamName = $connection->real_escape_string($_POST['tname']);  */
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,27 +42,27 @@
         </div>
     </div>
     <main>
-<form class="form-container" id="form">
+<form method="post" action="./form.php" class="form-container" id="form">
     <label class="form-item" for="fname">First name:</label>
-    <input type="text" id="fname" name="fname" value="" placeholder="Enter your Name..." pattern="[a-zA-Z]" required>
+    <input type="text" id="fname" name="fname" placeholder="Enter your Name..." >
     <label class="form-item" for="mname">Middle name:</label>
-    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)" pattern="[a-zA-Z]">
+    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)">
     <label class="form-item" for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname..." pattern="[a-zA-Z]" required >
+    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname...">
     <label class="form-item" for="btag">Battle Tag:</label>
-    REGEX<input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..." pattern="[a-zA-Z]" required>
+    REGEX<input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..." >
     <label class="form-item" for="tname">Team Name</label>
-    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..." pattern="[a-zA-Z0-9]" required/>
+    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..." >
     <label for="email">Enter your email:</label>
-    <input type="email" id="email" placeholder="Enter your email..." required>
+    <input type="email" name="email" id="email" placeholder="Enter your email..." >
     <label class="form-item" for="phone">Phone</label>
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your phone number..." required>
+    <input type="tel" id="phone" name="phone">
     <label class="form-item" for="city">City</label>
-    <input type="text" name="city" id="address" placeholder="Enter your city..." required>
+    <input type="text" name="city" id="address" placeholder="Enter your city..." >
     <label class="form-item" for="address">Address</label>
-    <input type="text" name="address" id="address" placeholder="Enter your address..." required>
+    <input type="text" name="address" id="address" placeholder="Enter your address..." >
     <label for="country">Country</label>
-<select id="country" name="country" value="" required>
+<select id="country" name="country" value="" >
    <option value="Afganistan">Afghanistan</option>
    <option value="Albania">Albania</option>
    <option value="Algeria">Algeria</option>
@@ -334,9 +336,10 @@
     <label class="form-item" for="tournament3">tournament6</label>
     <input type="radio" id="tournament6" name="tournaments" value="tournament3">
     <label class="form-item" for="bio"></label>
+    <button type="submit" form="form" value="Submit">Submit</button>
+  <button type="reset" form="form" value="Reset">Reset</button>   
   </form>
-  <!-- <button type="submit" form="form" value="Submit">Submit</button>
-  <button type="reset" form="form" value="Reset">Reset</button>    -->
+  
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
    <!--  <script src="./scripts/main.js"></script> -->
