--- a/form.html
+++ b/form.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    /* $battleTag = $connection->real_escape_string($_POST['btag']);
-    $teamName = $connection->real_escape_string($_POST['tname']);  */
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,25 +41,25 @@
     <main>
 <form method="post" action="./form.php" class="form-container" id="form">
     <label class="form-item" for="fname">First name:</label>
-    <input type="text" id="fname" name="fname" placeholder="Enter your Name..." >
+    <input type="text" id="fname" name="fname" placeholder="Enter your Name..." pattern="^[a-zA-Z]+$" maxlenght="30" required>
     <label class="form-item" for="mname">Middle name:</label>
-    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)">
+    <input type="text" id="mname" name="mname" value="" placeholder="(Optional)" pattern="^[a-zA-Z]+$" maxlenght="30">
     <label class="form-item" for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname...">
+    <input type="text" id="lname" name="lname" value="" placeholder="Enter your Surname..." pattern="^[a-zA-Z]+$" maxlenght="30" required>
     <label class="form-item" for="btag">Battle Tag:</label>
-    REGEX<input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..." >
+    <input type="text" id="btag" name="btag" value="" placeholder="Enter your Battle Tag..." maxlength="30" required>
     <label class="form-item" for="tname">Team Name</label>
-    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..." >
+    <input type="text" id="tname" name="tname" value="" placeholder="Enter your Team name..." maxlength="30" required>
     <label for="email">Enter your email:</label>
-    <input type="email" name="email" id="email" placeholder="Enter your email..." >
+    <input type="email" name="email" id="email" placeholder="Enter your email..." required>
     <label class="form-item" for="phone">Phone</label>
-    <input type="tel" id="phone" name="phone">
+    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}">
     <label class="form-item" for="city">City</label>
-    <input type="text" name="city" id="address" placeholder="Enter your city..." >
+    <input type="text" name="city" id="address" placeholder="Enter your city..." pattern="^[a-zA-Z]+$" maxlenght="30">
     <label class="form-item" for="address">Address</label>
-    <input type="text" name="address" id="address" placeholder="Enter your address..." >
+    <input type="text" name="address" id="address" placeholder="Enter your address..." maxlenght="50">
     <label for="country">Country</label>
-<select id="country" name="country" value="" >
+<select id="country" name="country" value="" required>
    <option value="Afganistan">Afghanistan</option>
    <option value="Albania">Albania</option>
    <option value="Algeria">Algeria</option>
@@ -311,19 +308,19 @@
    <option value="Zimbabwe">Zimbabwe</option>
    </select>
     <label class="form-item" for="age">Date of birth</label>
-    <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY"/>
+    <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY" required>
     <label for="gender">Gender</label>
-    <select name="gender" id="gender">
+    <select name="gender" id="gender" required>
         <option value="male">Male</option>
         <option value="female">Female</option>
         <option value="not binary">Not Binary</option>
     </select>
     <label class="form-item" for="hair-color">Hair</label>
-    <input class="color-input" type="color" id="hair-color" name="hair-color" value="hair-color" list/>
+    <input class="color-input" type="color" id="hair-color" name="hair-color" value="hair-color"reuired required/>
     <label class="form-item" for="eye-color">Eyes</label>
-    <input class="color-input" type="color" name="eye-color" id="eye-color" value="eye-color" list/>
+    <input class="color-input" type="color" name="eye-color" id="eye-color" value="eye-color"required/>
     <p class="tournaments">Desired Tournaments</p>
-    <label class="form-item" for="tournament1">tournament1</label>
+    <label class="form-item" for="tournament1">tournament1</label required>
     <input type="radio" id="tournament1" name="tournaments" value="tournament1">
     <label class="form-item" for="tournament2">tournament2</label>
     <input type="radio" id="tournament2" name="tournaments" value="tournament2">
@@ -344,4 +341,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
    <!--  <script src="./scripts/main.js"></script> -->
 
-</body>
+</body> 
