player html quick fix

--- a/players.html
+++ b/players.html
@@ -60,13 +60,13 @@
               <h2>Player profile</h2>
             <img src="" alt="selected player profile image">
             <p>Name: <span id="player-info-name">eeeee</span></p>
-            <p>Code: <span class="player-info-code"></span></p>
+            <p>Code: <span id="player-info-code"></span></p>
             <p>Bio:</p>
-            <p class="player-info-bio"></p>
-            <p>Age: <span class="player-info-age"></span></p>
-            <p>Years of experience: <span class="player-info-experience"></span></p>
-            <img src="" alt="player nationality" class="player-info-nationality">
-            <ul class="player-info-tournaments">
+            <p id="player-info-bio"></p>
+            <p>Age: <span id="player-info-age"></span></p>
+            <p>Years of experience: <span id="player-info-experience"></span></p>
+            <img src="" alt="player nationality" id="player-info-nationality">
+            <ul id="player-info-tournaments">
             </ul>
             </div>
             
