definitive player page on mobile v1

--- a/players.html
+++ b/players.html
@@ -57,15 +57,12 @@
         </h1>
       </div>
 
-      <video autoplay muted loop id="video-back">
-        <source src="./Contents/video/intro-video_Trim.mp4" type="video/mp4" />
-      </video>
+      <img src="./Contents/img/Spike_Rush_Banner.jpg" alt="banner" id="background-img">
     </div>
 
-    <div class="bottom-arrow" href="#jumpto"></div>
+    <div class="bottom-arrow"></div>
 
-    <section class="page-header" >
-      <h1 class="valorant-red">VALORANT</h1>
+    <section class="page-header">
       <h1>TEAMS AND PLAYERS</h1>
     </section>
     <main>
@@ -103,7 +100,7 @@
         </div>
       </section>
       <div class="category-subtitle" >
-        <h2 id="active" name="jumpto">ACTIVE TEAMS</h2>
+        <h2 id="active">ACTIVE TEAMS</h2>
       </div>
 
       <section class="active-players">
@@ -179,6 +176,7 @@
         </div>
       </div>
     </footer>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/players.js"></script>
   </body>
 </html>
