--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <li><a href="./form.html">JOIN US</a></li>
         </ul>
 
-        
-            <span class="arrow arrow-down"></span>
-        
+
+        <span class="arrow arrow-down"></span>
+
 
         <div class="logo-right">
             <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
@@ -70,7 +70,7 @@
             <h1><span>LevelUp</span><span class="intro-text">VALORANT</span><span id="esport">ESPORT</span></h1>
         </div>
 
-        <video autoplay muted loop  id="video-back">
+        <video autoplay muted loop id="video-back">
             <source src="./Contents/video/intro-video_Trim.mp4" type="video/mp4">
         </video>
     </div>
@@ -239,6 +239,35 @@
 
     </div>
 
+
+
+    <section class="about-us">
+
+        <h2>ABOUT</h2>
+
+        <div class="level-up">
+
+            <h1><span>LevelUp</span> was born in Turin in 2022 as an organizer of Valorant <a href="./tournaments.html" target="_blank"><span> tournaments</span></a>at an
+                international level</h1>
+
+
+        </div>
+
+        <div class="team">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt sunt tempore quam. Commodi sunt pariatur incidunt? Doloribus esse omnis dignissimos. Id aspernatur amet, nostrum a ullam assumenda expedita officia illum!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt sunt tempore quam. Commodi sunt pariatur incidunt? Doloribus esse omnis dignissimos. Id aspernatur amet, nostrum a ullam assumenda expedita officia illum!</p>
+        </div>
+
+        <div class="contacts">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, non dolorem! Iste, fugiat perspiciatis vel alias natus veniam! Incidunt voluptates dolor voluptatum necessitatibus id! Veniam, excepturi delectus! Sapiente, ad consequatur?</p>
+        </div>
+
+    </section>
+
+
+
+
+
     <div class="top">
         <a href="#" class="to-top"></a>
     </div>
@@ -286,6 +315,7 @@
         </div>
     </footer>
 
+    <script src="./scripts/index.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 
