--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
     <label for="email">Enter your email:</label>
     <input type="email" name="email" id="email" placeholder="Enter your email..." required>
     <label class="form-item" for="phone">Phone</label>
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}">
+    <input type="tel" id="phone" name="phone" placeholder="333-333-3333" pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}">
     <label class="form-item" for="city">City</label>
     <input type="text" name="city" id="address" placeholder="Enter your city..." pattern="^[a-zA-Z]+$" maxlenght="30">
     <label class="form-item" for="address">Address</label>
@@ -342,29 +342,26 @@
     <input class="color-input" type="color" id="hair-color" name="hair-color" value="hair-color"reuired required/>
     <label class="form-item" for="eye-color">Eyes</label>
     <input class="color-input" type="color" name="eye-color" id="eye-color" value="eye-color"required/>
-    <p class="tournaments">Desired Tournaments</p>
-    <label class="form-item" for="tournament1">tournament1</label required>
-    <input type="radio" id="tournament1" name="tournaments" value="tournament1">
-    <label class="form-item" for="tournament2">tournament2</label>
-    <input type="radio" id="tournament2" name="tournaments" value="tournament2">
-    <label class="form-item" for="tournament3">tournament3</label>
-    <input type="radio" id="tournament3" name="tournaments" value="tournament3">
-    <label class="form-item" for="tournament1">tournament4</label>
-    <input type="radio" id="tournament4" name="tournaments" value="tournament1">
-    <label class="form-item" for="tournament2">tournament5</label>
-    <input type="radio" id="tournament5" name="tournaments" value="tournament2">
-    <label class="form-item" for="tournament3">tournament6</label>
-    <input type="radio" id="tournament6" name="tournaments" value="tournament3">
-    <label class="form-item" for="bio"></label>
-    <button type="submit" form="form" value="Submit">Submit</button>
-  <button type="reset" form="form" value="Reset">Reset</button>   
+    <label for="tournament">Desired tournament</label>
+    <select name="tournament" id="tournament" class="tournament">
+        <option value="tournament1" class="tournament-item">tournament1</option>
+        <option value="tournament2" class="tournament-item">tournament2</option>
+        <option value="tournament3" class="tournament-item">tournament3</option>
+        <option value="tournament4" class="tournament-item">tournament4</option>
+        <option value="tournament5" class="tournament-item">tournament5</option>
+        <option value="tournament6" class="tournament-item">tournament6</option>
+    </select>
+    <label for="bio">Bio</label>
+   <textarea name="bio" id="bio" cols="50" rows="10" placeholder="(max 255 characters)" maxlength="255"></textarea>></textarea> 
+    <!-- <button type="submit" form="form" value="Submit">Submit</button>
+  <button type="reset" form="form" value="Reset">Reset</button>    -->
   </form>
   
     </main>
 
     <!-- footer -->
 
-    <footer>
+   <!--  <footer>
         <div class="footer-container">
             <div class="social-links">
 
@@ -397,6 +394,6 @@
             </div>
 
         </div>
-    </footer>
+    </footer> -->
 
 </body> 
