added more content to homepage, rivisited footer, minors fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
 
 
+
+
     <link rel="stylesheet" href="./style/style.css">
+
     <title>Valorant Esport</title>
 </head>
 
@@ -42,7 +45,7 @@
     <div class="header">
         <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
         <ul class="menu">
-            <li><a href="./index.html">HOMEPAGE</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="./tournaments.html">TOURNAMENTS</a></li>
             <li><a href="./players.html">TEAMS</a></li>
             <li><a href="./news.html">NEWS</a></li>
@@ -239,30 +242,78 @@
 
     </div>
 
+    <div class="sep"></div>
 
 
-    <section class="about-us">
+    <!-- TOURNAMENTS SECTION -->
 
-        <h2>ABOUT</h2>
+
+    <section class="tournaments">
+
+        <a href="./tournaments.html">
+            <h2> TOURNAMENTS </h2>
+
+            <p><span>LevelUp</span>has announced the venue for the first international VCT event with a live arena
+                setting. For the first time in the
+                tactical shooter’s short history, fans will be able to watch their icons from up close.
+                <br><br>
+                <em>
+                    Look at the
+                    dates of the
+                    upcoming tournaments!
+
+                </em>
+            </p>
+
+            <div class="trophy-card-home">
+
+                <span class="arrow arrow-right"></span>
+            </div>
+
+        </a>
+
+
+    </section>
+
+
+    <!-- TEAMS SECTION -->
+
+    <section class="teams">
+
+        <h2>TEAMS</h2>
+
+        <a href="./tournaments.html">
+            <img src="./teams.jpg" alt="" srcset="">
+            <h3>Meet our HEROES</h3>
+
+        </a>
+
+    </section>
+
+
+
+
+    <!-- ABOUT SECTION -->
+
+
+    <!-- <h2 class="about-text">ABOUT</h2>
+
+   
+
 
         <div class="level-up">
 
-            <h1><span>LevelUp</span> was born in Turin in 2022 as an organizer of Valorant <a href="./tournaments.html" target="_blank"><span> tournaments</span></a>at an
+            <h1><span>LevelUp</span> was born in Turin in 2022 as an organizer of Valorant <span> tournaments</span></a> at an
                 international level</h1>
+                <br><br>
 
 
         </div>
 
-        <div class="team">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt sunt tempore quam. Commodi sunt pariatur incidunt? Doloribus esse omnis dignissimos. Id aspernatur amet, nostrum a ullam assumenda expedita officia illum!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt sunt tempore quam. Commodi sunt pariatur incidunt? Doloribus esse omnis dignissimos. Id aspernatur amet, nostrum a ullam assumenda expedita officia illum!</p>
-        </div>
+        -->
 
-        <div class="contacts">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, non dolorem! Iste, fugiat perspiciatis vel alias natus veniam! Incidunt voluptates dolor voluptatum necessitatibus id! Veniam, excepturi delectus! Sapiente, ad consequatur?</p>
-        </div>
 
-    </section>
+
 
 
 
@@ -274,7 +325,7 @@
 
 
 
-    <!-- about -->
+
 
 
 
@@ -311,6 +362,30 @@
                     <li><a href="./form.html">JOIN US</a></li>
                 </ul>
             </div>
+
+            <div class="about-us">
+
+                <div class="team-levelup">
+                    <h2>OUR TEAM</h2>
+                    <p>Abrate Francesco</p>
+                    <p>Eloise Bryony Giorda</p>
+                    <p>Davide Murroni</p>
+                    <p>Giampietro Piras</p>
+                    <p>Federico Luciano Stroppiana</p>
+                
+                </div>
+
+                <div class="copy">&copy; LevelUp </div>
+                
+                <div class="contacts">
+                    <ul>
+                        <li>Email: levelup@mail.com</li>
+                        <li>Phone: 333-444-5555</li>
+                        <li>City: Italy, Piedmont, Turin 10138 </li>
+                    </ul>
+                </div>
+            </div>
+
 
         </div>
     </footer>
