fixed link teams

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
         <h2>TEAMS</h2>
 
-        <a href="./tournaments.html">
+        <a href="./players.html">
             <img src="./teams.jpg" alt="" srcset="">
             <h3>Meet our HEROES</h3>
 
