added hover on navbar / set red color as variable

--- a/form.html
+++ b/form.html
@@ -67,7 +67,16 @@
     </div>
 
 <main>
-       
+    <div class="form-intro">
+        <h2 class="normal-text">REGISTER <span class="normal-text">NOW</span></h2>
+            <p>
+                Welcome on the registration form page,
+                Please, fill out the information below to subscribe at any of our tournaments.
+            </p>
+            <p>
+                On first registration you can choose for one tournament only.
+            </p>
+    </div>
 <form method="post" action="./form.php" class="form-container" id="form">
     <div class="form-container">
         <div class="external-container-a">
@@ -416,8 +425,9 @@
             <textarea name="bio" id="bio" cols="50" rows="10" placeholder="(max 255 characters)" maxlength="255"></textarea>></textarea> 
         </div>
         </div>
-            <button class="form-button" type="submit" form="form" value="Submit">Submit</button>
             <button class="form-button" type="reset" form="form" value="Reset">Reset</button> 
+            <button class="form-button" type="submit" form="form" value="Submit">Submit</button>
+
 
         </div>
 </form>
