--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <title>Valorant Esport</title>
 </head>
 
-<body class="gallery-body">
+<body>
 
     <!-- HEADER -->
 
@@ -49,7 +49,11 @@
             <li><a href="./news.html">NEWS</a></li>
             <li><a href="./gallery.html">GALLERY</a></li>
             <li><a href="./form.html">JOIN US</a></li>
-        </ul>        
+        </ul>
+
+        
+            <span class="arrow arrow-down"></span>
+        
 
         <div class="logo-right">
             <img src="./Contents/img/transparent-red-logo2.png" alt="" srcset="">
@@ -60,6 +64,10 @@
             <span></span>
             <span></span>
         </div>
+    </div>
+
+    <div class="bottom-arrow">
+
     </div>
 
     <h2 class="gallery-title">GALLERY</h2>
